# zmora-queue

./: README.md  zmora-queue.cabal
app/: FeedQueue.hs  LookupQueue.hs
src/Zmora/: AMQP.hs  Queue.hs
